--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Test Site</title>
-  </head>
-  <body>
-    <h1>My domain works</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>My Site</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    body {
+      background: url("7035BC48-9B9D-4D16-854A-1F69506CFCD2_1_105_c.jpeg") no-repeat center center fixed;
+      background-size: cover;
+    }
+  </style>
+</head>
+<body>
+</body>
 </html>
