--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Site</title>
+  <title>KIWI</title>
   <style>
     html, body {
       height: 100%;
@@ -10,7 +10,7 @@
     }
     body {
       background: url("7035BC48-9B9D-4D16-854A-1F69506CFCD2_1_105_c.jpeg") no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
     }
   </style>
 </head>
