Final WIP Screen

--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
-<html>
-    <head>
-        <title>kiwiwi</title>
-        <style>
-            * {margin:0; padding: 0; color:red;}
-        </style>
-    </head>
-
-    <body>
-        <canvas id="tv-screen"></canvas>
-        <script src="js/app.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>chiwiwi</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      background: url("7035BC48-9B9D-4D16-854A-1F69506CFCD2_1_105_c.jpeg") no-repeat center center fixed;
+      background-size: contain;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    h1 {
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 3em;
+      text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    h2 {
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1.5em;
+      margin-top: 0.5em;
+      text-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+  </style>
+</head>
+<body>
+  <h1>Work in Progress</h1>
+</body>
+<body>
+  <h2>Kiwi says be patient</h2>
+</body>
 </html>
