--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div class="secret" id="secretOverlay" aria-hidden="true">
     <div class="secret-inner" id="secretInner">
       <img src="kiwi.jpeg" alt="Secret image" id="secretImage" />
-      <p id="secretText">Be patient!</p>
+      <p id="secretText">Kiwi says be patient.</p>
     </div>
   </div>
 
